--- a/src/pages/Authentication/Auth.module.scss
+++ b/src/pages/Authentication/Auth.module.scss
@@ -1,8 +1,12 @@
-.Auth{
-    height: 100%;
-    text-align: center;
-    form{
-        height: 50%;
-    }
-    // input{}
+.Auth {
+  height: 100%;
+  text-align: center;
+  form {
+    height: 50%;
+  }
+  input {
+    box-sizing: border-box;
+    width: 200px;
+    padding: 20px;
+  }
 }
