--- a/src/pages/Main_Pages/MovieDetails.module.scss
+++ b/src/pages/Main_Pages/MovieDetails.module.scss
@@ -1,13 +1,10 @@
-.MovieBackground {
-  top: 0;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  bottom: 0;
-  div {
-    h1 {
-      margin: 0;
-      padding: 50px;
-    }
+.Movie {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  min-height: 75vh;
+  margin-top: 10%;
+  img {
+    height: 500px;
   }
 }
