--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,13 @@
-$button-color: #1a9bce;
-$button-color2: #fefefe;
+$general_light: #fefefe;
+$general_dark:  #00000f;
 
-$background: #fafafa;
-$box-shadow: rgba(0, 0, 0, 0.2);
+$background_light: #E9E4F0;
+$background_dark: #232526;
+$box-shadow_dark: 0 0 15px 4px rgba(0, 0, 0, 0.3); 
+$box-shadow_light: 0 0 15px 4px rgba(255, 255, 255, 0.3); 
+
+$nav_light: #d3cce3;
+$nav_dark:#302b63;
+
+$input_light: #FFFFFF;
+$input_dark: #1F1C2C;
