--- a/src/pages/Main_Pages/Movies.module.scss
+++ b/src/pages/Main_Pages/Movies.module.scss
@@ -8,7 +8,6 @@
   padding: 20px 0 20px 0;
   font-size: 1.15rem;
   outline: none;
-  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.3);
   border: transparent;
 }
 
@@ -24,17 +23,31 @@
     display: grid;
     grid-gap: 2.5rem;
     grid-template-columns: repeat(4, 1fr);
+
+    .SpinnerCheck {
+      grid-template-columns: repeat(1, 1fr);
+      justify-content: space-evenly;
+    }
   }
   button {
     height: 50px;
     width: 50px;
+    padding: 20px;
     border-radius: 50%;
     outline: none;
     margin-top: 25%;
     cursor: pointer;
     border: transparent;
-    box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.3);
   }
+}
+
+.BackButton{
+  padding: 10px;
+  margin: 1% 0 0 5%;
+  cursor: pointer;
+  border-radius: 10px;
+  outline: none;
+  border: transparent;
 }
 
 // Extra input styles
@@ -45,16 +58,20 @@ input[type="search"]::-webkit-search-results-decoration {
   display: none;
 }
 
-button {
-  margin: 1% 0 0 5%;
-  padding: 20px;
-}
-
 @media (max-width: 900px) {
   .MainPage {
     max-width: 100vw;
     .Movies {
       grid-template-columns: repeat(3, 1fr);
+    }
+  }
+}
+
+@media (max-width: 750px) {
+  .MainPage {
+    max-width: 100vw;
+    .Movies {
+      grid-template-columns: repeat(2, 1fr);
     }
   }
 }
