--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -3,9 +3,10 @@
 .Navbar {
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-between;
   box-shadow: 0 4px 2px -2px $box-shadow_light;
-  height: 65px;
+  height: 75px;
 
   ul {
     width: 50%;
@@ -24,7 +25,7 @@
     margin-right: 4%;
     svg {
       cursor: pointer;
-      margin-top: 10px;
+      // margin-top: 10px;
       font-size: 3rem;
     }
     svg:hover {
