--- a/src/pages/Extra/About.module.scss
+++ b/src/pages/Extra/About.module.scss
@@ -3,27 +3,30 @@
   height: 100%;
   width: 100%;
   animation: fade 1s ease-in;
+  padding-bottom: 10%;
   h1 {
-    margin-top: 0;
     padding-top: 5%;
   }
   p {
     font-size: 1.5rem;
   }
-  a {
-    text-decoration: none;
-    font-size: 2rem;
-  }
-  a:hover {
-    text-decoration: underline;
-  }
   ul {
     list-style: none;
+    li {
+      margin-bottom: 1.5%;
+      a {
+        text-decoration: none;
+        font-size: 2rem;
+      }
+      a:hover {
+        border-top: 1px solid;
+      }
+    }
   }
 }
 
 @keyframes fade {
-    0% {
-      opacity: 0;
-    }
+  0% {
+    opacity: 0;
   }
+}
