--- a/src/components/Movie/Movie.module.scss
+++ b/src/components/Movie/Movie.module.scss
@@ -1,34 +1,106 @@
 .Movie {
-  animation: fade 1s ease-in;
-
-  img {
-    height: 85%;
-    width: 100%;
-    cursor: pointer;
+  .Content {
     transform: scale(1);
     transition: 0.2s ease-in-out;
+    cursor: pointer;
+    img {
+      height: 85%;
+      width: 100%;
+      border-radius: 1.5rem;
+    }
+    div {
+      display: flex;
+      justify-content: space-between;
+
+      h3 {
+        margin-left: 5%;
+      }
+      button {
+        margin-right: 5%;
+      }
+    }
+
+    .MiniDetails {
+      background-color: grey;
+      opacity: 0.9;
+      color: white;
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      height: 49%;
+      border-bottom-left-radius: 1.5rem;
+      border-bottom-right-radius: 1.5rem;
+      animation: fadeDetails 0.25s ease-in;
+      color: black;
+      div {
+        width: 100%;
+        opacity: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        h4 {
+          font-size: 1.1rem;
+          text-align: center;
+        }
+      }
+    }
   }
-  img:hover {
+  .Content:hover {
     transform: scale(1.05);
-    transition: 0.2s ease-in-out;
-    box-shadow: 4px 4px #888888;
+    transition: 0.25s ease-in-out;
   }
+}
 
-  div {
-    display: flex;
-    justify-content: space-between;
+.FadeDefault {
+  animation: fade 2s;
+}
 
-    h3 {
-      margin-left: 5%;
-    }
-    button {
-      margin-right: 5%;
-    }
-  }
+.FadeRight {
+  animation: fadeRight 0.5s;
+}
+
+.FadeLeft {
+  animation: fadeLeft 0.5s;
 }
 
 @keyframes fade {
   0% {
     opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeRight {
+  0% {
+    opacity: 0;
+    transform: translate3d(100%, 0, 0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+@keyframes fadeLeft {
+  0% {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+@keyframes fadeDetails {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.75;
   }
 }
