--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -7,6 +7,7 @@
   justify-content: space-between;
   box-shadow: 0 4px 2px -2px $box-shadow_light;
   height: 75px;
+  width: 100%;
 
   ul {
     width: 50%;
