--- a/src/pages/Main_Pages/Movies.module.scss
+++ b/src/pages/Main_Pages/Movies.module.scss
@@ -10,6 +10,23 @@
   outline: none;
   border: transparent;
 }
+.ButtonArea {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  padding-top: 12.5%;
+  button {
+    height: 50px;
+    width: 50px;
+    padding: 20px;
+    border-radius: 50%;
+    outline: none;
+    cursor: pointer;
+    border: transparent;
+    margin: 0 5rem;
+  }
+}
 
 .MainPage {
   width: 100%;
@@ -28,16 +45,6 @@
       grid-template-columns: repeat(1, 1fr);
       justify-content: space-evenly;
     }
-  }
-  button {
-    height: 50px;
-    width: 50px;
-    padding: 20px;
-    border-radius: 50%;
-    outline: none;
-    margin-top: 25%;
-    cursor: pointer;
-    border: transparent;
   }
 }
 
@@ -80,25 +87,43 @@ input[type="search"]::-webkit-search-results-decoration {
       width: 50%;
       grid-template-columns: repeat(1, 1fr);
     }
-    button {
-      height: 45px;
-      width: 45px;
-      padding: 12.5px 17.5px 12.5px 17.5px;
-      font-size: 1.5rem;
-      // border-radius: 50%;
-      // outline: none;
-      margin-top: 25%;
-      // cursor: pointer;
-      // border: transparent;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .ButtonArea {
+    button:first-child {
+      margin-left: 1.5rem;
+    }
+    button:nth-child(2) {
+      margin-right: 1.5rem;
     }
   }
 }
 
-// @media (max-width: 600px) {
-//   .MainPage {
-//     max-width: 100vw;
-//     .Movies {
-//       grid-template-columns: repeat(2, 1fr);
-//     }
-//   }
-// }
+@media screen and (max-width: 400px) {
+  .ButtonArea {
+    button:first-child {
+      margin-left: 0.5rem;
+    }
+    button:nth-child(2) {
+      margin-right: 0.5rem;
+    }
+  }
+}
+
+.SlidePage {
+  animation-name: fadeInRight;
+}
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translate3d(100%, 0, 0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
